2005-11-03  David N. Welton  <davidw@dedasys.com>

	* src/Makefile.am (lib_libexecdir): Install everything to
	rivet@VERSION@.

	* tests/runtests.tcl (runtests_usage): Check for utf-8 environment
	- this causes some problems with a number of tests.  I'm not sure
	precisely why, but it causes a large portion of otherwise
	successful tests to choke.

2005-10-31  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Woops, fix spelling error: Seperate->Separate.

2005-10-01  David N. Welton  <davidw@dedasys.com>

	* rivet/pkgIndex.tcl: Added a package index here so that when used
	for tests, something exists.

	* tests/runtests.tcl: Add local path to TCLLIBPATH, add
	CoreDumpDirectory so that we can get any core files generated by
	bad tests.

	* src/mod_rivet.c (Rivet_PerInterpExit): Run any per-interp child
	exit things that need taking care of.
	(Rivet_ChildExit): Walk through the list of interpreters and do
	any shut down work necessary prior to shutting the whole thing
	down.

	* src/rivetChannel.c (outputproc): If the AssocData is NULL, we
	don't try and output anything.  This is probably some residual
	data stuck in the channel.

2005-09-29  Karl Lehenbauer  <karl-rivet@sc.com>

	* rivet/packages/dio/dio.tcl: Fix typo in "DIO insert" method

2005-09-25  Karl Lehenbauer  <karl-rivet@sc.com>

	* src/rivetCore.c, src/mod_rivet.c, src/mod_rivet.h: Updated
	code comments.  In particular, every function in src/mod_rivet.c
	now has a standard header.

	* rivet/rivet-tcl: README, cookie.tcl, debug.tcl, html.tcl,
	import_keyvalue_pairs.tcl, import_switch_args.tcl, incr0.tcl,
        lassign.tcl, lempty.tcl, lmatch.tcl, load_cookies.tcl,
        load_response.tcl, parray.tcl, random.tcl, read_file.tcl,
        rivet_command_document.tcl, wrap.tcl: Updated code comments
	and added subversion "Id" tags where they weren't present.

2005-09-23  David N. Welton  <davidw@dedasys.com>

	* genconf.sh: Added autoheaders.
