@@ -1,3 +1,11 @@
+2005-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/makefile.vc:      Update for new version.
+	* win/Rivet.nsi:        Update for new version.
+	* src/apache_request.c: Cast aways some warnings.
+	* src/rivetCore.c:      Make it work with MSVC (wierd bug).
+	* src/TclWeb.h:         Declare TclWeb_GetRawPost (MSVC complains).
+
 2005-11-03  David N. Welton  <davidw@dedasys.com>
 
 	* src/Makefile.am (lib_libexecdir): Install everything to
